# hs-libbase64

./: CHANGELOG.md  LICENSE  README.md  default.nix  libbase64-bindings.cabal  libbase64.nix  shell.nix
src/: LibBase64Bindings.hs
test/: Main.hs
