cabal-version: 3.0
name:
  libase64-bindings
version:
  0.1
synopsis:
  wrapper over the libbase64 c library
description:
  Haskell wrapper of libbase64 SIMD library (https://github.com/aklomp/base64)
  .
  This module is intended to be simply a wrapper over the C library. It provides
  nothing in the way of a nice API or abstractions to make wortking with it "easy".
  Instead, it is meant to be a building block for other libraries to take up that
  more opinionated work.
homepage:
  https://github.com/chessai/libase64-bindings
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
-- copyright:
build-type:
  Simple
extra-doc-files:
  CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options:
    -Wall
  default-language:
    Haskell2010

library
  import:
    warnings
  exposed-modules:
    LibBase64Bindings
  build-depends:
    , base >= 4.9 && < 4.20
  hs-source-dirs:
    src
  includes:
    libbase64.h
  extra-libraries:
    base64

test-suite libase64-bindings-test
  import:
    warnings
  -- other-modules:
  -- other-extensions:
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
    , base
    , libase64-bindings
